fix(web-ui): map snake_case JSON response keys in Web UI JavaScript